# satellite-geolocation

./: .gitattributes  .gitignore  Dockerfile  Dockerfile.ui  LICENSE  README.md  app.py  docker-compose.yml  pixi.toml  pyproject.toml
data/embeddings/embeddings_dbs_SUES/: embeddings_dbs_SUES.npz
data/embeddings/embeddings_dbs_one_to_one/: embeddings_dbs_one_to_one.npz
data/embeddings/embeddings_dbs_three_to_one/: embeddings_dbs_three_to_one.npz
drone-localization/: main.py  pixi.toml  utils.py
drone-localization/api/endpoints/: localize.py
drone-localization/api/schemas/: localization.py
drone-localization/app/: app.py
drone-localization/core/services/: config_with_attention_head.json  refinement.py  retrieval.py
drone_localization/: main.py
drone_localization/app/: app.py
drone_localization/configs/: settings.py
drone_localization/infrastructure/: gallery_repository_impl.py
drone_localization/streamlit/: app.py  gallery_app.py
for_us/: __init__.py  example_config.py  fpi_demo.ipynb  fpi_model.py  new_demo.ipynb  requirements.txt  train.py
for_us/datasets/: SiamUAV.py  make_dataloader.py
for_us/distill/: config_with_attention_head.json  configuration_file.py  new_demo.ipynb  new_example_config.json  new_example_config.py  taskflow.py  utils.py
for_us/losses/: locloss.py
for_us/models/: taskflow.py
notebooks/: MCCG-experiment.ipynb  example_usage_of_refinment_model.ipynb  pixel_coords_to_gps.py  test2_tp (3).ipynb  test3_tp (1).ipynb
weights/: net_best.pth  retrieval.pth
weights/dual_branch_swin/: best_model_cartesian.pth
(+111 files in other folders)
