[project]
authors = [{name = "ysnlle", email = "fakievdanil76@gmail.com"}]
dependencies = ["uvicorn>=0.46.0,<0.47", "fastapi>=0.136.1,<0.137", "pydantic>=2.13.4,<3", "streamlit>=1.57.0,<2", "torch>=2.12.0,<3", "torchvision>=0.27.0,<0.28", "opencv-python>=4.13.0.92,<5", "pyyaml>=6.0.3,<7", "timm>=1.0.27,<2", "einops>=0.8.2,<0.9", "scipy>=1.17.1,<2", "minio", "qdrant-client>=1.18.0,<2", "pydantic-settings>=2.14.1,<3"]
name = "drone-localization"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
drone_localization = { path = ".", editable = true }

[tool.pixi.environments]
default = {solve-group = "default"}
dev = {features = ["devtools"], solve-group = "default"}

[tool.pixi.tasks]
dev-api = {cmd="uvicorn drone_localization.main:app --reload --host 0.0.0.0 --port 8000"}
dev-ui = {cmd="streamlit run drone_localization/streamlit/app.py"}
dev-galui = {cmd="streamlit run drone_localization/streamlit/gallery_app.py"}

[tool.pixi.dependencies]
minio = "*"

[dependency-groups]
devtools = ["ruff"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I"   
]
ignore = ["F401"]

